# streamlit-dashboard-sensors

./: .gitignore  README.md  pyproject.toml
app/: main.py
