[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "ARGI-BERRI", email = "me@endroit.net" }]
requires-python = ">=3.13"
dependencies = ["numpy>=2.3.3", "polars>=1.34.0", "streamlit>=1.50.0"]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/node_modules", "**/__pycache__", "**/*venv/**/*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=6.30.1"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
